# riskr-rs

./: .gitignore  Cargo.toml  DESIGN.md  Makefile  README.md  policy.yaml  sanctions.txt
benches/: decision_latency.rs
docker/: docker-compose.yml
docs/plans/: 2024-12-22-postgresql-implementation-plan.md  2024-12-22-postgresql-storage-design.md
migrations/: 0001_initial_schema.sql  20241222_001_initial_schema.sql
src/: lib.rs  main.rs
src/actor/: mod.rs  pool.rs  state.rs  user.rs
src/api/: mod.rs  request.rs  response.rs  routes.rs
src/config/: mod.rs
src/domain/: decision.rs  event.rs  evidence.rs  mod.rs  policy.rs  subject.rs
src/observability/: metrics.rs  mod.rs  tracing.rs
src/policy/: hot_reload.rs  loader.rs  mod.rs
src/rules/: mod.rs  traits.rs
src/rules/inline/: jurisdiction.rs  kyc_cap.rs  mod.rs  ofac.rs
src/rules/streaming/: daily_volume.rs  mod.rs  structuring.rs
src/storage/: mock.rs  mod.rs  postgres.rs  recovery.rs  snapshot.rs  traits.rs  wal.rs
